fixed vertical alignment, removed previous season games

--- a/V9.12.21/style.css
+++ b/V9.12.21/style.css
@@ -2,6 +2,8 @@
 body{
   background-image: url('background.jpg');
   background-repeat: no-repeat;
+  width:1280px;
+  height: 2160px;
 }
 
 .cd-section{
